--- a/k8s-manifests/04-php-apache-metrics-hpa/03-php-apache-service-node-port.yaml
+++ b/k8s-manifests/04-php-apache-metrics-hpa/03-php-apache-service-node-port.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: php-apache
   namespace: testing
+  labels:
+    role: php-apache
 spec:
   type: NodePort
   ports: 
