--- a/k8s-manifests/05-liveness-readiness-probe/06-service-nginx.yaml
+++ b/k8s-manifests/05-liveness-readiness-probe/06-service-nginx.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress
+  name: nginx
   namespace: testing
   labels:
-    role: wordpress
+    app: nginx
 spec:
   type: NodePort
   ports:
-  - port: 80
+  - port: 80 
     targetPort: 80
-    nodePort: 30000
+    nodePort: 30002
   selector:
-    role: wordpress
+    app: nginx
