--- a/13-cicd-terraform-circleci-kube-digitalocean/.gitignore
+++ b/13-cicd-terraform-circleci-kube-digitalocean/.gitignore
@@ -1,9 +1,9 @@
-.terraform
+.terraform/
 terraform.tfstate
 terraform.tfstate.backup
 id_rsa.pub
 id_rsa
 kubeconfig.yaml
-.terraform.lock.hcl
 .terraform.lock
 .terraform.tfstate.lock.info
+.terraform.lock.hcl
