--- a/terraform_do/.gitignore
+++ b/terraform_do/.gitignore
@@ -1,5 +1,13 @@
-.terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
 terraform.tfstate
 terraform.tfstate.backup
 id_rsa.pub
 id_rsa
+kubeconfig.yaml
+.terraform.lock
+.terraform.tfstate.lock.info
+.terraform.lock.hcl
+*.log
+*.terraform.lock.hcl
