Cloud and NFS StorageClass

--- a/12-statefulset-mongodb-persistent-storage/03-mongodb-statefulset-persistent-storage.yaml
+++ b/12-statefulset-mongodb-persistent-storage/03-mongodb-statefulset-persistent-storage.yaml
@@ -50,7 +50,7 @@ spec:
       name: persistent
     spec:
       accessModes: ["ReadWriteOnce"]
-      storageClassName: # REPLACE_WITH_CUSTOM_SC
+      storageClassName: nfs-client  # REPLACE_WITH_CUSTOM_SC
       resources:
         requests:
           storage: 1Gi
