--- a/17-traefik-crd-operator-terraform/.gitignore
+++ b/17-traefik-crd-operator-terraform/.gitignore
@@ -6,9 +6,9 @@ terraform.tfstate.backup
 id_rsa.pub
 id_rsa
 kubeconfig.yaml
-./terraform/kubeconfig.yaml
+/terraform/kubeconfig.yaml
 kubeconfig.yml
-./terraform/kubeconfig.yml
+/terraform/kubeconfig.yml
 .terraform.lock
 .terraform.tfstate.lock.info
 *.log
