GitLab CI/CD using a Kubernetes Cluster built with Terraform

--- a/18-gitlab-cicd-with-k8s-terraform/04-k8s-rbac.yaml
+++ b/18-gitlab-cicd-with-k8s-terraform/04-k8s-rbac.yaml
@@ -30,9 +30,9 @@ roleRef:
   kind: ClusterRole
   name: "deployment-manager"
   apiGroup: ""
-subjets:
+subjects:
   - kind: ServiceAccount
-    namespace: "gitlab-managed-apps"
+    namespace: "gitlab-runner"
     name: "default"
     apiGroup: ""
     
