--- a/18-gitlab-cicd-with-k8s-terraform/test/.gitlab-ci.yml
+++ b/18-gitlab-cicd-with-k8s-terraform/test/.gitlab-ci.yml
@@ -1,22 +1,27 @@
 # Customized file from official documentation
 docker-build:
   # Official docker image
-  image: docker:latest
+  image:
+        # An alpine-based image with the `docker` CLI installed.
+    name: docker:stable
   stage: build
   services:
-    - docker:dind
+  - name: docker:dind
+    entrypoint: ["dockerd-entrypoint.sh", "--tls=false"]
+  variables:
+    DOCKER_HOST: tcp://127.0.0.1:2375/
+    DOCKER_TLS_CERTDIR: ""
+    DOCKER_DRIVER: overlay2
   before_script:
+    - docker info
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
   script:
-    - docker build -pull -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA" .
-    - docker push "$CI_REGISTRY_IMAGE"
-  variables:
-    DOCKER_HOST: tcp://localhost:2375
-    DOCKER_TLS_CERTDIR: ""
+    - export DOCKER_HOST=tcp://127.0.0.1:2375 && docker build --pull -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA" .
+    - docker push $CI_REGISTRY_IMAGE
 
 deploy:
   stage: deploy
   image: bitnami/kubectl
   script:
     - kubectl get deployment hello-php || kubectl create deployment hello-php --image="$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
-    - kubectl set image deployment/hello-php hello-php="$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
+    - kubectl set image deployment/hello-php gitlab-cicd-test="$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
