--- a/21-jobs-cronjobs/01-job-pi.yaml
+++ b/21-jobs-cronjobs/01-job-pi.yaml
@@ -3,12 +3,11 @@ kind: Job
 metadata:
   name: pi
 spec:
-  ttlSecondsAfterFinished: 100
   template:
     spec:
       containers:
       - name: pi
-        image: perl
-        command: ["perl", "-Mbignum=bpi", "wle", "print bpi(2000)"]
+        image: perl:5.34.0
+        command: ["perl", "-Mbignum=bpi", "-wle", "print bpi(2000)"]
       restartPolicy: Never
-    backoffLimit: 4
+  backoffLimit: 4
