Jobs and Cronjobs with RabbitMQ-Redis and Python

--- a/21-jobs-cronjobs/02-job-rabbitmq.yaml
+++ b/21-jobs-cronjobs/02-job-rabbitmq.yaml
@@ -10,7 +10,7 @@ spec:
       name: job-rabbit
     spec:
       containers:
-      - name: rabbitmq
+      - name: c
         image: wusted/python-rabbitmq
         env:
         - name: BROKER_URL
