Jobs and Cronjobs with RabbitMQ-Redis and Python

--- a/21-jobs-cronjobs/03-job-redis.yaml
+++ b/21-jobs-cronjobs/03-job-redis.yaml
@@ -10,5 +10,5 @@ spec:
     spec:
       containers:
       - name: redis
-        image: wusted/pyhton-redis
+        image: wusted/python-redis
       restartPolicy: OnFailure
