--- a/24-hpa-all-metrics/00-hello-prom-example-deployment.yaml
+++ b/24-hpa-all-metrics/00-hello-prom-example-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: hello
-          image: quay.io/brancz/prometheus-example-app
+          image: quay.io/brancz/prometheus-example-app:v0.5.0
           ports:
             - name: http
               containerPort: 8080
