--- a/24-hpa-all-metrics/01-apiservice.yaml
+++ b/24-hpa-all-metrics/01-apiservice.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
-  name: v1beta1.custom.metrics.k8s.io
+  name: v1.custom.metrics.k8s.io
 spec:
   insecureSkipTLSVerify: true
   group: custom.metrics.k8s.io
@@ -10,13 +10,13 @@ spec:
   service:
     name: prometheus-adapter
     namespace: monitoring
-  version: v1beta1
+  version: v1
 
 ---
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
-  name: v1beta1.external.metrics.k8s.io
+  name: v1.external.metrics.k8s.io
 spec:
   insecureSkipTLSVerify: true
   group: external.metrics.k8s.io
@@ -25,4 +25,4 @@ spec:
   service:
     name: prometheus-adapter
     namespace: monitoring
-  version: v1beta1
+  version: v1
