HPA with Metrics for 4 types

--- a/24-hpa-all-metrics/05-rabbitmq.yaml
+++ b/24-hpa-all-metrics/05-rabbitmq.yaml
@@ -103,7 +103,9 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    component: rabbitmq
+    app.kubernetes.io/component: rabbitmq
+    app.kubernetes.io/name: prometheus-adapter
+    app.kubernetes.io/part-of: kube-prometheus
   name: rabbitmq
 spec:
   endpoints:
@@ -111,4 +113,6 @@ spec:
     port: web
   selector:
     matchLabels:
-      component: rabbitmq
+      app.kubernetes.io/component: rabbitmq
+      app.kubernetes.io/name: prometheus-adapter
+      app.kubernetes.io/part-of: kube-prometheus
