--- a/25-cert-manager-ingress/05-hello-ingress.yaml
+++ b/25-cert-manager-ingress/05-hello-ingress.yaml
@@ -2,14 +2,18 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
   - host: hello.pereirajean.com
     http:
-        paths:
-        - pathType: Exact
-          path: "/"
-          backend:
-            service:
-              name: hello-v1-svc
-              port: 80
+      paths:
+      - path: "/"
+        pathType: Prefix
+        backend:
+          service:
+            name: hello-v1-svc
+            port:
+              number: 80
