--- a/26-argocd/05-wordpress-helm-app.yaml
+++ b/26-argocd/05-wordpress-helm-app.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook-helm
+  name: wordpress-helm
   namespace: argocd
 spec:
   source:
-    path: helm-guestbook
+    path: helm-dependency
     repoURL: https://github.com/argoproj/argocd-example-apps.git
     targetRevision: HEAD
   destination:
